// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test umi-create test generate antd pro project from gitee.org 1`] = `
"? Select the boilerplate type (Use arrow keys)
❯ ant-design-pro  - Create project with a layout-only ant-design-pro boilerplate
, use together with umi block. 
  app             - Create project with a simple boilerplate, support typescript
. 
  plugin          - Create a umi plugin. [41D[41C[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[G? Select the boilerplate type ant-design-pro[44D[44C
? 🧙 Be the first to experience the new umi@3 ? (Use arrow keys)
  Pro V5 
❯ Pro V4 [9D[9C[2K[1A[2K[1A[2K[G? 🧙 Be the first to experience the new umi@3 ? Pro V4[54D[54C
? 🤓 Which language do you want to use? (Use arrow keys)
❯ TypeScript 
  JavaScript [13D[13C[2K[1A[2K[1A[2K[G? 🤓 Which language do you want to use? TypeScript[50D[50C
? 🚀 Do you need all the blocks or a simple scaffold? (Use arrow keys)
❯ simple 
  complete [11D[11C[2K[1A[2K[1A[2K[G? 🚀 Do you need all the blocks or a simple scaffold? simple[60D[60C
? 🦄 Time to use better, faster and latest antd@4! (Use arrow keys)
❯ antd@4 
  antd@3 [9D[9C[2K[1A[2K[1A[2K[G? 🦄 Time to use better, faster and latest antd@4! antd@4[57D[57C
❯ 🚚 clone success
❯ Clean up...
✨ File Generate Done
"
`;

exports[`test umi-create test generate antd pro project from github 1`] = `
"? Select the boilerplate type (Use arrow keys)
❯ ant-design-pro  - Create project with a layout-only ant-design-pro boilerplate
, use together with umi block. 
  app             - Create project with a simple boilerplate, support typescript
. 
  plugin          - Create a umi plugin. [41D[41C[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[G? Select the boilerplate type ant-design-pro[44D[44C
? 🧙 Be the first to experience the new umi@3 ? (Use arrow keys)
  Pro V5 
❯ Pro V4 [9D[9C[2K[1A[2K[1A[2K[G? 🧙 Be the first to experience the new umi@3 ? Pro V4[54D[54C
? 🤓 Which language do you want to use? (Use arrow keys)
❯ TypeScript 
  JavaScript [13D[13C[2K[1A[2K[1A[2K[G? 🤓 Which language do you want to use? 
  TypeScript 
❯ JavaScript [13D[13C[2K[1A[2K[1A[2K[G? 🤓 Which language do you want to use? JavaScript[50D[50C
? 🚀 Do you need all the blocks or a simple scaffold? (Use arrow keys)
❯ simple 
  complete [11D[11C[2K[1A[2K[1A[2K[G? 🚀 Do you need all the blocks or a simple scaffold? simple[60D[60C
? 🦄 Time to use better, faster and latest antd@4! (Use arrow keys)
❯ antd@4 
  antd@3 [9D[9C[2K[1A[2K[1A[2K[G? 🦄 Time to use better, faster and latest antd@4! antd@4[57D[57C
❯ 🚚 clone success
❯ [Sylvanas] Prepare js environment...
❯ [JS] Clean up...
❯ Clean up...
✨ File Generate Done
"
`;
